--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -20,3 +20,33 @@ input, button, textarea {
 button {
   cursor: pointer;
 }
+
+form input {
+  width: 100%;
+  height: 60px;
+  color: #333;
+  border: 1px solid #DCDCE6;
+  border-radius: 8px;
+  padding: 0 24px;
+}
+
+.button {
+  width: 100%;
+  height: 60px;
+  background-color: #E02041;
+  border: 0;
+  border-radius: 8px;
+  color: #FFF;
+  font-weight: 700;
+  margin-top: 16px;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 60px;
+  transition: filter 0.2s;
+}
+
+.button:hover {
+  filter: brightness(90%);
+}
